tests/fixtures/functional_patterns/positive/p38_hashmap_iter.rs
use std::collections::HashMap;

fn process_map(map: HashMap<String, i32>) -> Vec<i32> {
    map.into_iter()
        .map(|(_, v)| v)
        .filter(|&v| v > 0)
        .collect()
}
